--- a/application/frontend/package.json
+++ b/application/frontend/package.json
@@ -5,6 +5,8 @@
   "proxy": "http://172.18.53.42:3000",
   "dependencies": {
     "@babel/core": "^7.16.0",
+    "@emotion/react": "^11.14.0",
+    "@emotion/styled": "^11.14.0",
     "@fontsource/press-start-2p": "^5.2.5",
     "@fontsource/vt323": "^5.2.5",
     "@fullcalendar/core": "^6.1.15",
@@ -12,6 +14,8 @@
     "@fullcalendar/interaction": "^6.1.15",
     "@fullcalendar/react": "^6.1.15",
     "@fullcalendar/timegrid": "^6.1.15",
+    "@mui/icons-material": "^6.4.8",
+    "@mui/material": "^6.4.8",
     "@pmmmwh/react-refresh-webpack-plugin": "^0.5.3",
     "@svgr/webpack": "^5.5.0",
     "@tailwindcss/cli": "^4.0.9",
@@ -49,6 +53,7 @@
     "react-app-polyfill": "^3.0.0",
     "react-dev-utils": "^12.0.1",
     "react-dom": "^18.3.1",
+    "react-draggable": "^4.4.6",
     "react-refresh": "^0.11.0",
     "react-rnd": "^10.5.2",
     "react-router-dom": "^6.30.0",
